[tool.poetry]
name = "day3"
version = "0.1.0"
description = ""
authors = ["Koen Oosterwijk <koen.oosterwijk@demcon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
counter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
